OpenStreet map works, start on Treasurehunt view

--- a/geo-have/package.json
+++ b/geo-have/package.json
@@ -13,8 +13,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "firebase": "^10.9.0",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "firebase": "^10.9.0",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
