--- a/geo-have/package.json
+++ b/geo-have/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-confetti-explosion": "^1.0.2",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
