--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-      with:
-        path: geo-have  # Specify the correct path to your repository folder
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
@@ -21,8 +19,8 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      working-directory: geo-have  # Set the working directory to the correct folder
+      working-directory: ./geo-have  # Adjust the path to the correct directory
 
     - name: Run tests
       run: npm test
-      working-directory: geo-have  # Set the working directory to the correct folder
+      working-directory: ./geo-have  # Adjust the path to the correct directory
