--- a/geo-have/package.json
+++ b/geo-have/package.json
@@ -31,6 +31,7 @@
     "jsdom": "^24.0.0",
     "start-server-and-test": "^2.0.3",
     "vite": "^5.1.6",
+    "vite-plugin-pwa": "^0.20.0",
     "vitest": "^1.4.0"
   }
 }
