manifest works deployed

--- a/geo-have/public/manifest.json
+++ b/geo-have/public/manifest.json
@@ -3,22 +3,22 @@
   "description": "A treasure hunt app for the visitors to have fun with",
   "icons": [
     {
-      "src": "../src/assets/appicons/Icon-20x20.png",
+      "src": "./appicons/Icon-20x20.png",
       "type": "image/png",
       "sizes": "60x60"
     },
     {
-      "src": "../src/assets/appicons/Icon-40x40.png",
+      "src": "./appicons/Icon-40x40.png",
       "type": "image/png",
       "sizes": "80x80"
     },
     {
-      "src": "../src/assets/appicons/Icon-60x60.png",
+      "src": "./appicons/Icon-60x60.png",
       "type": "image/png",
       "sizes": "180x180"
     },
     {
-      "src": "../src/assets/appicons/Icon-marketing-1024x1024.png",
+      "src": "./appicons/Icon-marketing-1024x1024.png",
       "type": "image/png",
       "sizes": "1024x1024"
     }
