--- a/geo-have/public/manifest.json
+++ b/geo-have/public/manifest.json
@@ -25,5 +25,6 @@
   ],
   "display": "standalone",
   "start_url": "/index.html",
-  "background_color": "#fef9ea"
+  "background_color": "#fef9ea",
+  "theme_color": "#fef9ea"
 }
